dfir_rs/tests/compile-fail-stable/surface_badgeneric_nocolon.rs
../compile-fail/surface_badgeneric_nocolon.rs